--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -13,5 +13,12 @@ jobs:
       with:
         dotnet-version: 9.0.x
     - name: Install dependencies
-      run: dotnet restore ./
+      run: dotnet restore ./MyFirstAPI/MyFirstAPI.csproj
+    
+    - name: Build
+      run: dotnet build ./MyFirstAPI/MyFirstAPI.csproj --configuration Release --norestore
+
+
+
+
       
