--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -3,6 +3,10 @@ name: Deploy Munson Pickles API
 on:
   workflow_dispatch:
 
+env:
+AZURE_WEBAPP_NAME: "app-dotnet-app"
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,8 +21,14 @@ jobs:
     
     - name: Build
       run: dotnet build ./MyFirstAPI.csproj --configuration Release --no-restore
+    # publish
+    - name: Publish
+      run: dotnet publish ./MyFirstAPI.csproj --configuration Release --no-build --output ./publish
 
-
-
-
-      
+    # deploy to azure
+    - name: Deploy to Azure Web App
+    uses: azure/webapps-deploy@v2
+    with:
+      app-name: ${{env.AZURE_WEBAPP_NAME}}
+      publish-profile: ${{secrets.API_PUBLISH_SECRET}}
+      package: ./publish
